Bug 78325 - FILESAVE: Preferred table width in percent not preserved after RT
Summary: FILESAVE: Preferred table width in percent not preserved after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: IA64 (Itanium) All
: medium normal
Assignee: Yogesh Bharate
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-06 07:56 UTC by Yogesh Bharate
Modified: 2014-05-12 22:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
document contains Preferred table width in percentage (12.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-06 07:56 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2014-05-06 07:56:48 UTC
Created attachment 98542 [details]
document contains Preferred table width in percentage

Problem description: 

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office

Current behavior:
Preferred table width in percent preserved after RT.

Expected behavior:
Preferred table width in percent not preserved after RT.
              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Commit Notification 2014-05-12 07:25:16 UTC
YogeshBharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=533e435acd116615b4c6d4872f51b467d623ddd6

fdo#78325: Table Preferred width in percent is not preserved after RT.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Jorendc 2014-05-12 22:20:52 UTC
Not eproducible anymore, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: cc4a3f1a88afff114311bddf462ca4bc00a485c7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-05-12_09:05:53

Thanks!