fdo#78325: Table Preferred width in percent is not preserved after RT.

Problem Description :
- After RT, table preferred width in percent is change to '0'.
- After RT, width type change to 'auto' instead of 'pct'.

XML Difference:
In Original  : <w:tblW w:w="3000" w:type="pct" />
In Roundtrip : <w:tblW w:w="0" w:type="auto" />

Change-Id: I20f4011520715b7c1555e82dd1ca590c4b1b9b3a
Reviewed-on: https://gerrit.libreoffice.org/9277
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>